--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -2,7 +2,8 @@ body {
     margin: 0;
     font-family: "Inter", sans-serif;
     background-color: #f6f7f8;
-  }
+}
+
 /* hier beginnt css für die navbar */
 .menu {
     display: flex;
@@ -12,45 +13,45 @@ body {
     height: 100vh;
     background-color: #2a3647;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
-  }
-  
-  .menuLogo {
+}
+
+.menuLogo {
     display: flex;
     justify-content: center;
     height: 122px;
     padding-top: 64px;
-  }
-  
-  .menuButtonContainer {
+}
+
+.menuButtonContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 15px;
-  }
-  
-  .menuButton {
+}
+
+.menuButton {
     display: flex;
     align-items: center;
     gap: 8px;
     width: 120px;
     padding: 8px 56px;
     cursor: pointer;
-  }
-  
-  .menuButton p {
+}
+
+.menuButton p {
     margin-block-start: 0;
     margin-block-end: 0;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     color: #cdcdcd;
-  }
-  
-  .menuButton:hover {
+}
+
+.menuButton:hover {
     background-color: #2a3d59;
-  }
-  
-  .selectedMenuButton {
+}
+
+.selectedMenuButton {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -58,30 +59,32 @@ body {
     padding: 8px 56px;
     cursor: pointer;
     background-color: #091931;
-  }
-  
-  .selectedMenuButton p {
+}
+
+.selectedMenuButton p {
     margin-block-start: 0;
     margin-block-end: 0;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     color: #cdcdcd;
-  }
-  
-  .menuFooter {
+}
+
+.menuFooter {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     gap: 4px;
     height: 317px;
     padding-bottom: 64px;
-  }
-  .menuFooter p{
-    margin-block-start: 0 !important;
-    margin-block-end: 0 !important;
-  }
-  .menuFooterButton{
+}
+
+.menuFooter p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.menuFooterButton {
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -90,13 +93,14 @@ body {
     padding: 8px;
     padding-left: 52px;
     cursor: pointer;
-  }
-  .menuFooterButton:hover{
+}
+
+.menuFooterButton:hover {
     color: #29abe2;
     font-weight: 700;
-  }
-  
-  .selectedFooterButton{
+}
+
+.selectedFooterButton {
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -105,5 +109,4 @@ body {
     padding: 8px;
     padding-left: 52px;
     background-color: #091931;
-  }
-  
+}
