--- a/styles/index.css
+++ b/styles/index.css
@@ -1,15 +1,36 @@
+h1 {
+    font-size: 64px;
+}
+
 .logoSlideIn {
     animation-name: logoSlideIn;
     animation-duration: 2s;
     animation-fill-mode: forwards;
 }
 
+.overDivFormLogIn {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .right0 {
     right: 0;
 }
 
+.bot60LeftCenter {
+    bottom: 60px;
+    left: calc(50vw - 110px);
+}
+
 .padTop60 {
     padding-top: 60px;
+}
+
+.padRight30 {
+    padding-right: 30px;
 }
 
 .padRight60 {
