--- a/styles/index.css
+++ b/styles/index.css
@@ -1,29 +1,13 @@
+body {
+    background-color: #F6F7F8;
+}
+
 h1 {
     font-size: 64px;
+    margin: 16px;
 }
 
-.logoSlideIn {
-    animation-name: logoSlideIn;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-}
-
-.overDivFormLogIn {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.right0 {
-    right: 0;
-}
-
-.bot60LeftCenter {
-    bottom: 60px;
-    left: calc(50vw - 110px);
-}
+/* ---------- PADDING AND MARGIN ---------- */
 
 .padTop60 {
     padding-top: 60px;
@@ -37,8 +21,55 @@ h1 {
     padding-right: 60px;
 }
 
+.marBot16px {
+    margin-bottom: 20px;
+}
+
+/* ---------- FONTS ---------- */
+
 .fontSize16 {
     font-size: 16px;
+}
+
+/* ---------- OTHERS ---------- */
+
+.overDivFormLogIn {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.formLogIn {
+    box-shadow: 0px 0px 14px 3px #0000000A;
+    background-color: white;
+    padding: 40px 60px;
+    border-radius: 10px;
+}
+
+.blueLine {
+    width: 150px;
+    height: 2px;
+    background-color: #29ABE2;
+    margin-bottom: 20px;
+}
+
+.bot60LeftCenter {
+    bottom: 60px;
+    left: calc(50vw - 110px);
+}
+
+.right0 {
+    right: 0;
+}
+
+/* ---------- ANIMATIONS ---------- */
+
+.logoSlideIn {
+    animation-name: logoSlideIn;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
 }
 
 @keyframes logoSlideIn {
