--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,10 @@ body {
     position: absolute;
 }
 
+.posRelative {
+    position: relative;
+}
+
 /* ---------- DISPLAY ---------- */
 
 .d-none {
