--- a/styles/board.css
+++ b/styles/board.css
@@ -3,6 +3,8 @@
     display: flex; 
     flex-direction: column;
     position: absolute;
+    width: 1208px; 
+    height: 232px; 
     top: 96px;
     left: 232px;
 }
@@ -10,44 +12,52 @@
     display: flex;
    align-items: center;
    justify-content: space-between;
-   margin-left: 50px;
-   margin-right: 50px;
-   
+   width: 1056px; 
+   height: 73px;
+   margin-top: 79.5px;
+   margin-left: 64px;
+}
+
+.headline {
+    display: flex;
+    align-items: center;
+    width: 176px; 
+    height: 73px; 
+    gap: 1px; 
+    font-size: 61px;
+    font-weight: 700;
 }
 
 .menubar h2 {
     font-size: 52px;
 }
 
-#searchTask{
-    font-size: 32px;
-    height:200px;
-    
-} 
 .menubar input{
     height: 48px;
     width: 312px; 
     border-radius: 10px;
     border: 1px; 
-    padding: 8px, 16px, 8px, 16px; 
+    padding: 8px 16px 8px 16px; 
     gap: 10px;
     font-size: 20px;
     font-weight: 400;
 }
 .menubar button {
-    border: 1px;
     display: flex;
-    gap: 4px;
-    padding: 8px, 16px, 8px, 16px;
     align-items: center;
     justify-content: center;
+    gap: 4px;
+    padding: 8px 16px 8px 16px;
     font-weight: 700;
     font-size: 21px;
     height: 48px;
     width: 160px;
     border-radius: 10px;
-    background-color: black;
+    background-color: #2A3647;
     color:white;
+    border: 1px;
+    border-color:#2A3647 ;
+   
 }
 
 .fakeInput {
@@ -63,8 +73,9 @@ height: 32px;
 
 .searchAdd {
     display: flex;
-    gap: 10px;
-    
+    gap: 32px;
+    width: 504px; 
+    height: 48px;
 }
 
 .progressBar {
