--- a/styles/legalNotice.css
+++ b/styles/legalNotice.css
@@ -13,6 +13,7 @@ body {
     margin-top: 206px;
     margin-left: 96px;
     margin-bottom: 40px;
+    margin-right: 40px;
 }
 
 a {
@@ -39,4 +40,10 @@ h2 {
 
 p {
     font-size: 16px;
+}
+
+.arrow {
+    position: fixed;
+    top: 225px;
+    right: 40px;
 }
