--- a/styles/privacyPolicy.css
+++ b/styles/privacyPolicy.css
@@ -1,6 +1,12 @@
 body {
     margin: 0;
     display: flex;
+    font-family: Inter, sans-serif;
+}
+
+@font-face {
+    font-family: Inter, sans-serif;
+    src: url(/fonts/inter-v13-latin-regular.woff2);
 }
 
 .privacy-policy-container {
@@ -8,4 +14,15 @@ body {
     margin-left: 96px;
     margin-right: 40px;
     margin-bottom: 40px;
+}
+
+.arrow {
+    position: fixed;
+    top: 225px;
+    right: 40px;
+}
+
+h1 {
+    font-size: 61px;
+    font-weight: 700;
 }
