--- a/styles/privacyPolicy.css
+++ b/styles/privacyPolicy.css
@@ -26,3 +26,15 @@ h1 {
     font-size: 61px;
     font-weight: 700;
 }
+
+h3 {
+    margin-block-end: 0;
+}
+
+h4 {
+    margin-block-end: 0;
+}
+
+a {
+    color: black;
+}
