--- a/styles/help.css
+++ b/styles/help.css
@@ -1,17 +1,16 @@
 body {
     margin: 0;
-    display: flex;
-    font-family: Inter, sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 @font-face {
-    font-family: Inter, sans-serif;
+    font-family: "Inter", sans-serif;
     src: url(/fonts/inter-v13-latin-regular.woff2);
 }
 
 .main-help-container {
     margin-top: 206px;
-    margin-left: 96px;
+    margin-left: 328px;
     margin-right: 40px;
 }
 
