--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -13,6 +13,8 @@ body {
     height: 100vh;
     background-color: #2a3647;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
 }
 
 .menuLogo {
