--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,4 +1,7 @@
 
+body {
+    background-color: rgb(246, 247, 248) !important;
+}
 a {
     text-decoration: none;
     color: black;
@@ -9,8 +12,8 @@ a {
 }
 
 .summary-container {
-    margin-top: 96px;
-    margin-left: 96px;
+    margin-top: 50px;
+    margin-left: 20%;
 }
 
 .headline{ 
@@ -130,6 +133,7 @@ a {
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     padding: 38px 50px 38px 58px;
@@ -176,8 +180,8 @@ a {
 }
 
 .arrow-icon {
-    width: 34px;
-    height: 15px;
+    width: 35px;
+    height: 25px;
 }
 
 .urgency-container {
@@ -185,6 +189,7 @@ a {
     align-items: center;
     justify-content: center;
     height: 168px;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
     overflow: hidden;
@@ -239,6 +244,7 @@ a {
     height: 168px;
     padding: 38px 19px 38px 19px;
     text-align: center;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
 }
