--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,4 +1,8 @@
-
+html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
 body {
     background-color: rgb(246, 247, 248) !important;
 }
@@ -10,17 +14,28 @@ a {
 .flex-container {
     display: flex;
 }
+.summary-container-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 
+}
 .summary-container {
-    margin-top: 50px;
-    margin-left: 20%;
+
+    margin-top: 96px;
+    margin-left: 232px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    height: auto;
+    overflow: hidden;
 }
 
 .headline{ 
     display: flex;
     align-items: center;
-    padding-top: 80px;
-    padding-bottom: 56px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     gap: 30px;
 }
 
@@ -37,6 +52,9 @@ a {
     font-size: 61px;
 }
 
+.fs-50 {
+    font-size: 50px;
+}
 .fs-64 {
     font-size: 64px;
 }
@@ -129,6 +147,7 @@ a {
 }
 
 .button-container {
+    height: 168px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -255,23 +274,7 @@ a {
     transform: scale(1.01);
 }
 
-#greetingMobile {
-    /*display: flex;*/
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 160px);
-}
 
-#greetingMobile #greeting {
-    font-size: 36px;
-    font-weight: 400;
-}
-
-#greetingMobile #name {
-    font-size: 47px;
-    font-weight: 700;
-}
 
 @keyframes fadeOut {
     0% {
