--- a/styles/board.css
+++ b/styles/board.css
@@ -145,6 +145,6 @@ height: 32px;
     padding: 16px; 
     gap: 10px;
     background-color: #FFFFFF;
-    box-shadow: 0 0 10 3; 
+    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.08)
     ;
 }
