navbar active button highlight javascript finished

--- a/templates/navBar.html
+++ b/templates/navBar.html
@@ -14,7 +14,7 @@
       </div>
       <div class="menuButtonContainer" id="menuButtonContainer">
         <div
-          class="selectedMenuButton"
+          class="menuButton"
           id="summaryButton"
           onclick="openPage('summary')"
         >
@@ -35,7 +35,7 @@
         </div>
         <div
           class="menuButton"
-          id="contactButton"
+          id="contactsButton"
           onclick="openPage('contacts')"
         >
           <img src="../img/contact_icon.png" alt="contact_icon" />
