--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,8 +1,3 @@
-html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-}
 body {
     background-color: rgb(246, 247, 248) !important;
 }
@@ -16,19 +11,18 @@ a {
 }
 .summary-container-wrapper {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 100vh;
-
+    width: 100%;
 }
 .summary-container {
-
+    flex-direction: column;
     margin-top: 96px;
     margin-left: 232px;
-    padding-left: 30px;
+    padding-left: 10%;
     padding-bottom: 30px;
     height: auto;
-    overflow: hidden;
 }
 
 .headline{ 
@@ -242,7 +236,12 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 80px;
+    margin-top: 180px;
+    margin-left: 50px;
+    padding-right: 10%;
+}
+.greeting-content {
+    /* width: 400px; */
 }
 
 .name-container {
