--- a/styles/board.css
+++ b/styles/board.css
@@ -139,6 +139,8 @@ height: 32px;
 }
 
 .card {
+    display:flex; 
+    flex-direction: column;
     width: 252px; 
     height: 263px; 
     border-radius: 24px; 
@@ -148,3 +150,25 @@ height: 32px;
     box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.08)
     ;
 }
+
+.noTask {
+    display:flex; 
+    align-items: center;
+    justify-content: center;
+    width: 246px; 
+    height: 48px; 
+    border-radius: 10px;
+    gap: 10px; 
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.16); 
+    color: #A8A8A8;
+    border: 1px solid rgba(168, 168, 168, 1)
+
+}
+
+.cardInsideFrame {
+    display: flex; 
+    width: 220px; 
+    height: 231px; 
+    gap: 24px;
+}
+
