--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -14,7 +14,7 @@
     <div class="addTask">Add Task</div>
     <div class="taskWrapper">
     <div class="taskFrame">
-        <div class="title">
+        <div class="taskTitle">
             <div>Title<span class="red">*</span></div>
             <input type="text" placeholder="Enter a Title" />
         </div>
