--- a/styles/board.css
+++ b/styles/board.css
@@ -142,13 +142,12 @@ height: 32px;
     display:flex; 
     flex-direction: column;
     width: 252px; 
-    height: 263px; 
+    /* height: 263px;  */
     border-radius: 24px; 
     padding: 16px; 
     gap: 10px;
     background-color: #FFFFFF;
-    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.08)
-    ;
+    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.08);
 }
 
 .noTask {
@@ -172,3 +171,16 @@ height: 32px;
     gap: 24px;
 }
 
+.technicalTaskBg {
+    background-color: #1FD7C1;
+    border-radius: 5px;
+    padding: 4px 16px 4px 16px;
+    color: white;
+}
+
+.userStoryBg {
+    background-color: #0038FF;
+    border-radius: 5px;
+    padding: 4px 16px 4px 16px;
+    color: white;
+}
