--- a/styles/board.css
+++ b/styles/board.css
@@ -198,3 +198,17 @@ height: 32px;
     height: 6.5px;
     border-radius: 10px;
 }
+
+.initialsBoard {
+    font-size: 14px;
+    color: white;
+    border: 1px solid white;
+    margin: -3px;
+    padding: 5px;
+    border-radius: 100%;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
