--- a/styles/board.css
+++ b/styles/board.css
@@ -142,10 +142,13 @@ height: 32px;
     display:flex; 
     flex-direction: column;
     width: 252px; 
-    /* height: 263px;  */
     border-radius: 24px; 
-    padding: 16px; 
-    gap: 10px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    padding-right: 24px;
+    padding-left: 24px;
+    box-sizing: border-box;
+    gap: 20px;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.08);
 }
