--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -158,7 +158,7 @@ select#assign {
    cursor: pointer;
 }
 
-.prioOrange {
+.active {
     background-color: rgba(255, 168, 0, 1) !important;
     color: white;
 
