--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="../styles/addTask.css" />
     <link rel="stylesheet" href="../styles/style.css" />
     <script src="/js/navBar.js"></script>
+    <script src ="../js/addTask.js"></script>
 </head>
-<body onload="includeHTML()">
+<body onload="init(), includeHTML()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="addTask">Add Task</div>
@@ -16,15 +17,15 @@
     <div class="taskFrame">
         <div class="taskTitle">
             <div>Title<span class="red">*</span></div>
-            <input type="text" placeholder="Enter a Title" />
+            <input id="title" type="text" placeholder="Enter a Title" />
         </div>
             <div class="description">
                 <div>Description</div>
-                <textarea rows="2" cols="25" placeholder="Enter a Description"></textarea>
+                <textarea id="description" rows="2" cols="25" placeholder="Enter a Description"></textarea>
             </div>
                <div class="assign">Assigned to
                 <div class="dropdown">
-                    <form action="/action_page.php">
+                    <form>
                         <select name="contacts" id="assign">
                           <option value="preview">Select contacts to assign</option>
                           <option value="contact1">Thomas Müller</option>
@@ -37,31 +38,31 @@
     <div class="taskFrame2">
         <div class="deadline">
             <div>Due Date <span class="red">*</span></div>
-            <input type="date" value="dd//mm//yyyy" />
+            <input id="due" type="date" value="dd//mm//yyyy" />
         </div>
         <div class="priority">
             Priority 
             <div class="prio">
                 <div><button>Urgent <img src="../img/prio alta.png"></button></div>
-                <div><button class="prioOrange">Medium <img src="../img/Capa 2.png"></button></div>
+                <div><button class="active">Medium <img src="../img/Capa 2.png"></button></div>
                 <div"><button>Low <img src="../img/Capa 1.png"></button></div>
             </div>
             
             <div class="category">
                 <div>Category</div>
                 <div class="dropdown">
-                    <form action="/action_page.php">
-                        <select name="contacts" id="assign">
+                    <form>
+                        <select name="contacts" id="category">
                           <option value="preview">Select task category</option>
-                          <option value="contact1">User Story</option>
-                          <option value="contact2">Technical Task</option>
-                          <option value="contact3">Task 3</option>
+                          <option value="UserStory">User Story</option>
+                          <option value="TechnicalTask">Technical Task</option>
+                          
                         </select>
                 </div>
         </div>
         <div class="subtasks">
             <div>Subtasks</div>
-            <input type="text" placeholder="Add new subtask" />
+            <input id ="subtasks" type="text" placeholder="Add new subtask" />
         </div>
         </div> 
     </div>
@@ -70,7 +71,7 @@
     </div>  
     <div class="create">
         <button class="clear">Clear <img src="../img/iconoir_cancel.png"></button>
-        <button class="createTask">Create Task <img src="../img/check.png"></button>
+        <button onclick="createTask()" class="createTask">Create Task <img src="../img/check.png"></button>
     </div>
 </div>        
 </div>
