--- a/templates/navBar.html
+++ b/templates/navBar.html
@@ -24,7 +24,7 @@
         <div
           class="menuButton"
           id="addTaskButton"
-          onclick="openPage('templates/addTaskTemplate')"
+          onclick="openPage('addTask')"
         >
           <img src="../img/add_task_icon.png" alt="add_task_icon" />
           <p>Add Task</p>
