--- a/styles/board.css
+++ b/styles/board.css
@@ -141,12 +141,9 @@ height: 32px;
 .card {
     display:flex; 
     flex-direction: column;
-    width: 252px; 
+    min-width: 252px; 
     border-radius: 24px; 
-    padding-top: 24px;
-    padding-bottom: 24px;
-    padding-right: 24px;
-    padding-left: 24px;
+    padding: 24px;
     box-sizing: border-box;
     gap: 20px;
     background-color: #FFFFFF;
@@ -203,15 +200,45 @@ height: 32px;
 }
 
 .initialsBoard {
-    font-size: 14px;
+    font-size: 12px;
     color: white;
     border: 1px solid white;
     margin: -3px;
-    padding: 5px;
+    padding: 3px;
     border-radius: 100%;
     height: 20px;
     width: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#boardTaskOverlay>div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.08); 
+    z-index: 100;
+}
+
+#boardTaskOverlay>div>div {
+    width: 400px;
+}
+
+.closeImgBoard {
+    right: 24px;
+    top: 24px;
+    height: 25px;
+}
+
+.width100Px {
+    width: 100px;
+}
+
+.lightGreyVerticalLine {
+    background-color: #D1D1D1;
+    height: 20px;
+    width: 0.5px;
 }
