--- a/styles/header.css
+++ b/styles/header.css
@@ -111,3 +111,10 @@
     width: 32px;
     height: 39px;
 }
+
+.close-popup-by-click {
+    display: none;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+}
