--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/style.css" />
     <script src="/js/navBar.js"></script>
     <script src ="../js/addTask.js"></script>
+    <script src="js/header.js"></script>
 </head>
 <body onload="init(), includeHTML()">
     <div w3-include-html="/templates/navBar.html"></div>
