fixed popup links

--- a/templates/header.html
+++ b/templates/header.html
@@ -32,10 +32,10 @@
       </div>
       <div class="popUp-container" id="popUpUser">
         <div>
-          <div class="popUp-button" onclick="openPage('legality')">
+          <div class="popUp-button" onclick="openPage('legalNotice')">
             Legal Notice
           </div>
-          <div class="popUp-button" onclick="openPage('policy')">
+          <div class="popUp-button" onclick="openPage('privacyPolicy')">
             Privacy Policy
           </div>
           <div class="popUp-button" onclick="logoutUser()">Log out</div>
