--- a/templates/header.html
+++ b/templates/header.html
@@ -38,7 +38,7 @@
           <div class="popUp-button" onclick="openPage('privacyPolicy')">
             Privacy Policy
           </div>
-          <div class="popUp-button" onclick="logoutUser()">Log out</div>
+          <div class="popUp-button" onclick="logOut()">Log out</div>
         </div>
       </div>
     </div>
