--- a/templates/navBar.html
+++ b/templates/navBar.html
@@ -46,14 +46,14 @@
         <p
           id="privacyPolicyButton"
           class="menuFooterButton"
-          onclick="openPage('policy')"
+          onclick="openPage('privacyPolicy')"
         >
           Privacy Policy
         </p>
         <p
           id="legalNoticeButton"
           class="menuFooterButton"
-          onclick="openPage('legality')"
+          onclick="openPage('legalNotice')"
         >
           Legal notice
         </p>
