--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -6,11 +6,15 @@
     <title>AddTask</title>
     <link rel="stylesheet" href="../styles/addTask.css" />
     <link rel="stylesheet" href="../styles/style.css" />
-    <script src="/js/navBar.js"></script>
-    <script src ="../js/addTask.js"></script>
-    <script src="js/header.js"></script>
+    <script src="./js/storageToken.js" defer></script>
+    <script src="./js/storage.js" defer></script>
+    <script src="./js/register.js" defer></script>
+    <script src="./js/index.js" defer></script>
+    <script src="/js/navBar.js" defer></script>
+    <script src ="../js/addTask.js" defer></script>
+    <script src="js/header.js" defer></script>
 </head>
-<body onload="init(), includeHTML()">
+<body onload="initAddTask()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="addTask">Add Task</div>
