--- a/styles/index.css
+++ b/styles/index.css
@@ -36,6 +36,10 @@ h1 {
 
 /* ---------- PADDING AND MARGIN ---------- */
 
+.padTop20 {
+    padding-top: 20px;
+}
+
 .padTop60 {
     padding-top: 60px;
 }
