--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     width: 232px;
-    height: 100%;
+    height: 100vh;
     background-color: #2a3647;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
     position: fixed;
