--- a/styles/board.css
+++ b/styles/board.css
@@ -224,7 +224,7 @@ height: 32px;
 }
 
 #boardTaskOverlay>div>div {
-    width: 400px;
+    width: 350px;
 }
 
 .closeImgBoard {
@@ -241,4 +241,15 @@ height: 32px;
     background-color: #D1D1D1;
     height: 20px;
     width: 0.5px;
+}
+
+.inputBoardEdit {
+    border: 0.5px solid lightgrey;
+    border-radius: 5px;
+    padding: 8px 13px;
+    outline: none;
+}
+
+.inputBoardEdit::placeholder {
+    color: #CDCDCD;
 }
