--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,10 @@ h1 {
 
 /* ---------- HEIGHT AND WIDTH ---------- */
 
+.height10 {
+    height: 10px;
+}
+
 .height13 {
     height: 13px;
 }
@@ -36,8 +40,16 @@ h1 {
 
 /* ---------- PADDING AND MARGIN ---------- */
 
+.padTop5 {
+    padding-top: 5px;
+}
+
 .padTop20 {
     padding-top: 20px;
+}
+
+.padTop35 {
+    padding-top: 35px;
 }
 
 .padTop60 {
@@ -52,6 +64,10 @@ h1 {
     padding-right: 60px;
 }
 
+.padLeft2 {
+    padding-left: 2px;
+}
+
 .padLeft6 {
     padding-left: 6px;
 }
@@ -62,6 +78,10 @@ h1 {
 
 .padLeft16 {
     padding-left: 16px;
+}
+
+.padBot5 {
+    padding-bottom: 5px;
 }
 
 .marBot20 {
@@ -82,6 +102,10 @@ h1 {
 
 .marLeft30{
     margin-left: 30px;
+}
+
+.marRight28 {
+    margin-right: 28px;
 }
 
 .gap6 {
