createdAt is now properly pushed into the array

--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -32,7 +32,7 @@
                 <div class="dropdown">
                     <form>
                         <select name="contacts" id="assign">
-                          <option value="preview">Select contacts to assign</option>
+                          <option value="preview" disabled>Select contacts to assign</option>
                           <option value="contact1">Thomas Müller</option>
                           <option value="contact2">Heinz Schmidt</option>
                           <option value="contact3">Edeltraud Schneider</option>
