--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -644,19 +644,23 @@ a {
 
     .overlay-contact {
         flex-direction: column;
-        width: 100%;
-        height: 100vh;
+        width: 90%;
+        height: calc(100vh - 160px);
     }
 
     .blue-container {
-        width: 100%;
-        height: 40%;
+        width: calc(100% - 20px);
+        height: 45%;
         border-top-left-radius: 30px;
         border-top-right-radius: 30px;
         border-bottom-left-radius: 0px;
         display: flex;
-        align-items: center;
-        padding-left: 0px;
+        align-items: first baseline;
+        padding-left: 20px;
+    }
+
+    .blue-container img {
+        margin-bottom: 40px;
     }
 
     .logo {
@@ -671,7 +675,7 @@ a {
         margin-bottom: 40px;
         width: 100%;
         margin-right: 0;
-        height: 60%;
+        height: 55%;
         margin-top: 100px;
     }
 
@@ -686,7 +690,7 @@ a {
         width: 120px;
         height: 120px;
         position: absolute;
-        top: 28%;
+        top: 30%;
     }
 
     .button2 {
